--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=tikets
+spring.datasource.url=jdbc:mysql://localhost:3306/tikets
+spring.datasource.username=root
+spring.datasource.password=rootPass
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
